# oz_django6

./: manage.py  pyproject.toml
.github/workflows/: ci.yml
oz_django6/: asgi.py  settings.py  urls.py  wsgi.py
tabom/: models.py
tabom/migrations/: 0001_initial.py
